Japanese translation updates.
* subversion/po/ja.po: Fix a mistake.
  Now ja.po has 1471 translated messages against r19585 (Emacs PO-mode
  status: "1472t215o").

--- a/subversion/po/ja.po
+++ b/subversion/po/ja.po
@@ -6442,8 +6442,7 @@ msgid ""
 "  If PATH is a directory, the contents of the directory are added\n"
 "  directly under URL.\n"
 msgstr ""
-"import: バージョン管理されていないファイルやツリーをリポジトリに入れてコ"
-"ミッ\n"
+"バージョン管理されていないファイルやツリーをリポジトリに入れてコミッ\n"
 "トします。\n"
 "使用方法: import [<パス>] <URL>\n"
 "\n"
