Polish translation update.
* subversion/po/pl.po: translated one message (svn sync).

--- a/subversion/po/pl.po
+++ b/subversion/po/pl.po
@@ -35,7 +35,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.1.0\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-02-07 22:48+0100\n"
-"PO-Revision-Date: 2006-02-07 23:00+0100\n"
+"PO-Revision-Date: 2006-05-18 12:33+0200\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: Polish <dev@subversion.tigris.org>\n"
 "MIME-Version: 1.0\n"
@@ -8217,6 +8217,8 @@ msgid ""
 "usage: svnsync initialize DEST_URL --source-url SOURCE_URL\n"
 "Initialize a destination repository.\n"
 msgstr ""
+"użycie: svnsync initialize DOCELOWY_URL --source-url ŹRÓDŁOWY_URL\n"
+"Inicjuje docelowe repozytorium.\n"
 
 #: svnsync/main.c:70
 msgid ""
