--- a/subversion/po/sv.po
+++ b/subversion/po/sv.po
@@ -43,7 +43,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.3\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-05-09 14:02+0200\n"
-"PO-Revision-Date: 2006-05-09 14:23+0200\n"
+"PO-Revision-Date: 2006-05-21 13:23+0200\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -7373,8 +7373,8 @@ msgid ""
 "disallow use of SVNDIFF1 in on-disk storage,\n"
 "                             for backwards compatibility"
 msgstr ""
-"tillåt ej användning av svndiff1 vid lagring på disk,\n"
-"                             for bakåtkompatibilitet"
+"tillåt ej användning av svndiff1 vid lagring på\n"
+"                             disk, för bakåtkompatibilitet"
 
 #: svnadmin/main.c:299
 msgid ""
