--- a/CHANGES
+++ b/CHANGES
@@ -10,21 +10,21 @@ http://svn.collab.net/repos/svn/tags/1.3.2
  User-visible-changes:
   - Client:
     * fixed: crash in svn st -u on missing subdirs (r19348, -73)
-    * svn_load_dirs.pl symlink support. (issue #2478)
+    * svn_load_dirs.pl symlink support (issue #2478)
     * fixed: svn_load_dirs.pl trying to import .svn and _svn dirs (r18549)
-    * fixed: don't leave stray WC locks on cancelation (r18893)
+    * fixed: leaving stray WC locks on cancelation (r18893)
     * translation updates to Japanese, Traditional Chinese.
 
   - Server:
-    * fixed: memory leak in mod_dav_svn and listing large dirs (r19528)
+    * fixed: memory leak in mod_dav_svn when listing large dirs (r19528)
     * fixed: svnserve protocol error in lock, causing client hang (issue #2548)
     * fixed: mod_dav_svn crash on valid request (r19520)
     * mailer.py: add Content-Transfer-Encoding header (r19319)
     * fixed: authz requires read access for root for writes (issue #2486)
 
 Developer-visible-changes:
-* fixed: RPM breakae (r19060)
-* support  apr 0.9.x >= 0.9.10 (r19039, -57)
+* fixed: RPM breakage (r19060)
+* support APR 0.9.x >= 0.9.10 (r19039, -57)
 * python bindings:
       - fixed: link error on OpenBSD (r18983)
 * ruby bindings:
