--- a/CHANGES
+++ b/CHANGES
@@ -12,13 +12,13 @@ http://svn.collab.net/repos/svn/tags/1.3.2
     * fixed: crash in svn st -u on missing subdirs (r19348, -73)
     * svn_load_dirs.pl symlink support (issue #2478)
     * fixed: svn_load_dirs.pl trying to import .svn and _svn dirs (r18549)
-    * fixed: leaving stray WC locks on cancelation (r18893)
+    * fixed: leaving stray WC locks on cancellation (r18893)
     * translation updates to Japanese, Traditional Chinese.
 
   - Server:
     * fixed: memory leak in mod_dav_svn when listing large dirs (r19528)
     * fixed: svnserve protocol error in lock, causing client hang (issue #2548)
-    * fixed: mod_dav_svn crash on valid request (r19520)
+    * fixed: mod_dav_svn crash on valid request (found by Coverity) (r19520)
     * mailer.py: add Content-Transfer-Encoding header (r19319)
     * fixed: authz requires read access for root for writes (issue #2486)
 
