--- a/CHANGES
+++ b/CHANGES
@@ -9,7 +9,7 @@ http://svn.collab.net/repos/svn/tags/1.3.2
 
  User-visible-changes:
   - Client:
-    * fixed: crash in svn st -u on missing subdirs (r19348, -73)
+    * fixed: crash in svn st -u on missing subdirs (r19348, -73, issue #2551)
     * svn_load_dirs.pl symlink support (issue #2478)
     * fixed: svn_load_dirs.pl trying to import .svn and _svn dirs (r18549)
     * fixed: leaving stray WC locks on cancellation (r18893)
