--- a/CHANGES
+++ b/CHANGES
@@ -24,10 +24,12 @@ http://svn.collab.net/repos/svn/tags/1.3.2
 
 Developer-visible-changes:
 * fixed: RPM breakage (r19060)
+* support SWIG 1.3.28
 * support APR 0.9.x >= 0.9.10 (r19039, -57)
 * python bindings:
       - fixed: link error on OpenBSD (r18983)
 * ruby bindings:
+      - fixed: memory leak (r19493)
       - fixed: NULL argument conversion bug (r19543)
 
 
