--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ http://svn.collab.net/repos/svn/tags/1.3.2
 
 Developer-visible-changes:
 * fixed: RPM breakage (r19060)
+* fixed: tests don't catch repository creation failure properly (r19149,-51)
 * support SWIG 1.3.28
 * support APR 0.9.x >= 0.9.10 (r19039, -57)
 * python bindings:
