--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ http://svn.collab.net/repos/svn/tags/1.3.2
     * fixed: svnserve protocol error in lock, causing client hang (issue #2548)
     * fixed: mod_dav_svn crash on valid request (r19520)
     * mailer.py: add Content-Transfer-Encoding header (r19319)
+    * mailer.py: fixed: named substitutions incorrectly ignored (r18114, -681)
     * fixed: authz requires read access for root for writes (issue #2486)
 
 Developer-visible-changes:
