--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ http://svn.collab.net/repos/svn/tags/1.4.0
 
 
 Version 1.3.2
-(?? May 2006, from /branches/1.3.x)
+(23 May 2006, from /branches/1.3.x)
 http://svn.collab.net/repos/svn/tags/1.3.2
 
  User-visible-changes:
